feat: Knn ad implemented in class

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -27,9 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\P2001\\AppData\\Local\\Temp\\ipykernel_22088\\2186090489.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  RatingsData = pd.read_csv(\"datasets/XWines_Full_21M_ratings.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "RatingsData = pd.read_csv(\"datasets/XWines_Full_21M_ratings.csv\")\n",
     "\n",
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +104,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Set"
+    "### Similarity test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +121,13 @@
     "df= pd.DataFrame(matUserSim)\n",
     "df.to_csv(\"datasets/test.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
