--- a/01introduction.ipynb
+++ b/01introduction.ipynb
@@ -10,16 +10,16 @@
     "\n",
     "\n",
     "## About the dataset\n",
-    "### X-Wines: A wine dataset for recommender systems and machine learning \n",
-    "#### Rogério Xavier de Azambuja (rogerio.xavier@farroupilha.ifrs.edu.br)\n",
-    "#### Dataset X-Wines from https://github.com/rogerioxavier/X-Wines\n",
+    "X-Wines: A wine dataset for recommender systems and machine learning<br>\n",
+    "Rogério Xavier de Azambuja (rogerio.xavier@farroupilha.ifrs.edu.br)<br>\n",
+    "Dataset X-Wines from https://github.com/rogerioxavier/X-Wines<br><br>\n",
     "\n",
-    "##### Link to the data necessary to run the project: https://drive.google.com/drive/folders/1iC90-CMZOpFd3fJlpntbAl8J1VxfcWth?usp=sharing"
+    "Link to the data necessary to run the project: https://drive.google.com/drive/folders/1iC90-CMZOpFd3fJlpntbAl8J1VxfcWth?usp=sharing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "d8b5b7af",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "0f66e099",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "1007"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "d3d2d272",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "72026e6c",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        " dtype: int64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "a8ac338f",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "57521edc",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "c7b1db35",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "1f79273e",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,14 +283,32 @@
    "source": [
     "## Project Goals\n",
     "\n",
-    "Given a wine we want to find similar ones\n",
+    "The primary goal of this project is to develop a system that can identify wines similar to a given wine from the dataset.\n",
     "\n",
-    "### Approaches we are going to use\n",
-    "Knn on PCA and cosine similarity on SVD\n",
+    "### Approaches\n",
     "\n",
-    "### Expected outcome\n",
-    "Both approaches compute cosine distance so we expect similar results"
+    "1. **K-Nearest Neighbors (KNN) on Principal Component Analysis (PCA)**:\n",
+    "   - Reduce the dimensionality of the dataset using PCA.\n",
+    "   - Use KNN to find wines similar to the target wine based on the reduced dimensions.\n",
+    "\n",
+    "2. **Cosine Similarity on Singular Value Decomposition (SVD)**:\n",
+    "   - Apply SVD to decompose the dataset.\n",
+    "   - Compute cosine similarity between wines based on the resulting components.\n",
+    "\n",
+    "3. **Cosine Similarity with Neural Network Embeddings**:\n",
+    "   - Train a neural network to learn embeddings for the wines.\n",
+    "   - Use cosine similarity to find similar wines based on these learned embeddings.\n",
+    "\n",
+    "### Expected Outcome\n",
+    "\n",
+    "Since both the KNN on PCA and the cosine similarity on SVD approaches involve computing cosine distances, we anticipate that they will yield similar results. The experiment with neural network embeddings aims to compare and possibly enhance the effectiveness of similarity detection using learned representations."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a701747c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
