--- a/03deepLearningEmbeddings.ipynb
+++ b/03deepLearningEmbeddings.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deep Learining approach\n",
+    "The aim remains the same as before but we compute cosine similarity differently.We create a custom dataset class to generate triplets (anchor, positive, and negative samples) for training a neural network model. The model learns to project the combined features into an embedding space using fully connected layers. The training process involves optimizing a triplet margin loss to distinguish between similar and dissimilar wines. The embeddings are then extracted and used to compute cosine similarity between wines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
