--- a/submission.ipynb
+++ b/submission.ipynb
@@ -4,9 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RS Project\n",
+    "# Content-based recommendation for wine :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Valentin Tharaud - Luca Pedranzini\n",
-    "\n",
     "\n",
     "## About the dataset\n",
     "X-Wines: A wine dataset for recommender systems and machine learning<br>\n",
@@ -286,13 +291,6 @@
     "### Expected Outcome\n",
     "\n",
     "Since both the KNN on PCA and the cosine similarity on SVD approaches involve computing cosine distances, we anticipate that they will yield similar results. The experiment with neural network embeddings aims to compare and possibly enhance the effectiveness of similarity detection using learned representations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Content-based recommendation for wine :"
    ]
   },
   {
@@ -2108,7 +2106,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim remains the same as before but we compute cosine similarity differently.We create a custom dataset class to generate triplets (anchor, positive, and negative samples) for training a neural network model. The model learns to project the combined features into an embedding space using fully connected layers. The training process involves optimizing a triplet margin loss to distinguish between similar and dissimilar wines. The embeddings are then extracted and used to compute cosine similarity between wines"
+    "The aim remains the same as before but we compute cosine similarity differently.We create a custom dataset class to generate **triplets (anchor, positive, and negative samples)** for training a neural network model. The model learns to project the combined features into an embedding space using fully connected layers. The training process involves **optimizing a triplet margin loss** to distinguish between similar and dissimilar wines. The embeddings are then extracted and used to compute cosine similarity between wines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import the library:\n",
+    "- `pandas` for CSV reading and data manipulation.\n",
+    "- `numpy` for numerical computations and matrix operations.\n",
+    "- `torch` for building and training neural networks.\n",
+    "- `torch.utils.data.Dataset` and `torch.utils.data.DataLoader` for handling datasets and batching.\n",
+    "- `torch.nn` for defining neural network layers.\n",
+    "- `torch.nn.functional` for common functions used in neural networks.\n",
+    "- `torch.optim.Adam` for the Adam optimization algorithm."
    ]
   },
   {
@@ -2130,7 +2142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the dataset"
+    "## Load the dataset"
    ]
   },
   {
@@ -2155,8 +2167,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a simple dataset and dataloader\n",
-    "A custom dataset class is defined for triplet training, which involves selecting an anchor wine, a positive (similar) wine, and a negative (dissimilar) wine. Random selection ensures a diverse set of training samples. The DataLoader facilitates efficient batch processing and shuffling, which is essential for effective training of the model."
+    "## Create a simple dataset and dataloader\n",
+    "A custom dataset class is defined for **triplet training**, which involves selecting an **anchor wine**, a **positive (similar) wine**, and a **negative (dissimilar) wine**. **Random selection** ensures a **diverse set of training samples**. The **DataLoader** facilitates **efficient batch processing** and **shuffling**, which is essential for **effective training** of the model.\n"
    ]
   },
   {
@@ -2195,8 +2207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define the model\n",
-    "We define a simple neural network model with an embedding layer that learns a vector representation (embedding) for each wine. The embedding dimension is set to 50, which balances between capturing enough detail and computational efficiency. This model transforms wine IDs into meaningful vectors in a lower-dimensional space."
+    "## Define the model\n",
+    "We define a **simple neural network model** with an **embedding layer** that learns a **vector representation (embedding)** for each wine. The **embedding dimension** is set to **50**, which balances between capturing enough detail and computational efficiency.\n"
    ]
   },
   {
@@ -2225,8 +2237,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loss and optimizer\n",
-    "The TripletMarginLoss is chosen as it encourages the model to learn embeddings where the positive wine is closer to the anchor wine than the negative wine by a margin. The Adam optimizer is used for its efficiency and adaptive learning rate capabilities, helping in faster convergence."
+    "## Loss and optimizer\n",
+    "The **TripletMarginLoss** is chosen as it encourages the model to learn embeddings where the **positive wine** is closer to the **anchor wine** than the **negative wine** by a **margin**. The **Adam optimizer** is used for its **efficiency** and **adaptive learning rate capabilities**, helping in **faster convergence**.\n"
    ]
   },
   {
@@ -2244,8 +2256,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train the model to learn embeddings\n",
-    "This function trains the model using the triplet loss. For each epoch, the model processes batches of triplets (anchor, positive, negative), computes the embeddings, calculates the loss, and updates the model parameters. Printing the loss per epoch helps monitor training progress and performance."
+    "## Train the model to learn embeddings\n",
+    "This function trains the model using the **triplet loss**. For each **epoch**, the model processes batches of **triplets (anchor, positive, negative)**, computes the **embeddings**, calculates the **loss**, and updates the **model parameters**. **Printing the loss per epoch** helps monitor **training progress** and **performance**.\n"
    ]
   },
   {
@@ -2293,8 +2305,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract embeddings\n",
-    "After training, we extract the learned embeddings from the model. These embeddings are numerical representations of wines in a lower-dimensional space, capturing similarities and differences based on the training process."
+    "## Extract embeddings\n",
+    "After training, we **extract the learned embeddings** from the model. These embeddings are **numerical representations of wines** in a **lower-dimensional space**, capturing **similarities and differences** based on the training process.\n"
    ]
   },
   {
@@ -2311,7 +2323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function to find similar wines\n",
+    "## Function to find similar wines\n",
     "This function identifies wines similar to a given wine based on cosine similarity of their embeddings. "
    ]
   },
@@ -2338,9 +2350,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing the results:\n",
+    "We compare the recommedation given by the function that uses embeddings with one of the two we saw before"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2390,11 +2414,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Given that this was an experimental way of capturing information about wine and using it to make suggestions, we observe a **worse overlap of results** compared to previous methods. However, we still achieve a **high percentage of stable results** after 5 recommendations. This suggests there is an **underlying pattern** in these suggestions, confirming the effectiveness of our approach.\n"
+   ]
   }
  ],
  "metadata": {
